--- a/notebooks_chap_7/7_3_Initialization.ipynb
+++ b/notebooks_chap_7/7_3_Initialization.ipynb
@@ -1,24 +1,10 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [],
-   "authorship_tag": "ABX9TyOaATWBrwVMylV1akcKtHjt",
-   "include_colab_link": true
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "L6chybAVFJW2"
+   },
    "source": [
     "# **Notebook 7.3: Initialization**\n",
     "\n",
@@ -27,38 +13,44 @@
     "Work through the cells below, running each cell in turn. In various places you will see the words \"TO DO\". Follow the instructions at these places and make predictions about what is going to happen or write code to complete the functions.\n",
     "\n",
     "Contact me at udlbookmail@gmail.com if you find any mistakes or have any suggestions."
-   ],
-   "metadata": {
-    "id": "L6chybAVFJW2"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
-    "id": "LdIDglk1FFcG",
     "ExecuteTime": {
      "end_time": "2024-04-07T00:21:48.479069Z",
      "start_time": "2024-04-07T00:21:48.474028Z"
-    }
+    },
+    "id": "LdIDglk1FFcG"
    },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
-   ],
-   "outputs": [],
-   "execution_count": 22
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "First let's define a neural network.  We'll just choose the weights and biases randomly for now"
-   ],
    "metadata": {
     "id": "nnUoI0m6GyjC"
-   }
+   },
+   "source": [
+    "First let's define a neural network.  We'll just choose the weights and biases randomly for now"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-07T00:21:48.569431Z",
+     "start_time": "2024-04-07T00:21:48.560674Z"
+    },
+    "id": "WVM4Tc_jGI0Q"
+   },
+   "outputs": [],
    "source": [
     "def init_params(K, D, sigma_sq_omega):\n",
     "    # Set seed so we always get the same random numbers\n",
@@ -85,37 +77,37 @@
     "        all_biases[layer] = np.zeros((D, 1))\n",
     "\n",
     "    return all_weights, all_biases"
-   ],
-   "metadata": {
-    "id": "WVM4Tc_jGI0Q",
-    "ExecuteTime": {
-     "end_time": "2024-04-07T00:21:48.569431Z",
-     "start_time": "2024-04-07T00:21:48.560674Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 23
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-07T00:21:48.597628Z",
+     "start_time": "2024-04-07T00:21:48.594167Z"
+    },
+    "id": "jZh-7bPXIDq4"
+   },
+   "outputs": [],
    "source": [
     "# Define the Rectified Linear Unit (ReLU) function\n",
     "def ReLU(preactivation):\n",
     "    activation = preactivation.clip(0.0)\n",
     "    return activation"
-   ],
-   "metadata": {
-    "id": "jZh-7bPXIDq4",
-    "ExecuteTime": {
-     "end_time": "2024-04-07T00:21:48.597628Z",
-     "start_time": "2024-04-07T00:21:48.594167Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 24
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-07T00:21:48.648436Z",
+     "start_time": "2024-04-07T00:21:48.640716Z"
+    },
+    "id": "LgquJUJvJPaN"
+   },
+   "outputs": [],
    "source": [
     "def compute_network_output(net_input, all_weights, all_biases):\n",
     "    # Retrieve number of layers\n",
@@ -143,28 +135,40 @@
     "    net_output = all_f[K]\n",
     "\n",
     "    return net_output, all_f, all_h"
-   ],
-   "metadata": {
-    "id": "LgquJUJvJPaN",
-    "ExecuteTime": {
-     "end_time": "2024-04-07T00:21:48.648436Z",
-     "start_time": "2024-04-07T00:21:48.640716Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 25
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Now let's investigate how the size of the outputs vary as we change the initialization variance:\n"
-   ],
    "metadata": {
     "id": "bIUrcXnOqChl"
-   }
+   },
+   "source": [
+    "Now let's investigate how the size of the outputs vary as we change the initialization variance:\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-07T00:21:48.682266Z",
+     "start_time": "2024-04-07T00:21:48.671506Z"
+    },
+    "id": "A55z3rKBqO7M"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer 1, std of hidden units = 0.363\n",
+      "Layer 2, std of hidden units = 0.294\n",
+      "Layer 3, std of hidden units = 0.407\n",
+      "Layer 4, std of hidden units = 0.356\n",
+      "Layer 5, std of hidden units = 0.181\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of layers\n",
     "K = 5\n",
@@ -185,62 +189,182 @@
     "\n",
     "for layer in range(1, K + 1):\n",
     "    print(\"Layer %d, std of hidden units = %3.3f\" % (layer, np.std(all_h[layer])))"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
-    "id": "A55z3rKBqO7M",
     "ExecuteTime": {
-     "end_time": "2024-04-07T00:21:48.682266Z",
-     "start_time": "2024-04-07T00:21:48.671506Z"
-    }
+     "end_time": "2024-04-07T00:21:48.709133Z",
+     "start_time": "2024-04-07T00:21:48.705335Z"
+    },
+    "id": "VL_SO4tar3DC"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Layer 1, std of hidden units = 0.363\n",
-      "Layer 2, std of hidden units = 0.294\n",
-      "Layer 3, std of hidden units = 0.407\n",
-      "Layer 4, std of hidden units = 0.356\n",
-      "Layer 5, std of hidden units = 0.181\n"
+      "Layer 1, std of hidden units = 0.063\n",
+      "Layer 2, std of hidden units = 0.031\n",
+      "Layer 3, std of hidden units = 0.021\n",
+      "Layer 4, std of hidden units = 0.016\n",
+      "Layer 5, std of hidden units = 0.011\n",
+      "Layer 6, std of hidden units = 0.006\n",
+      "Layer 7, std of hidden units = 0.004\n",
+      "Layer 8, std of hidden units = 0.002\n",
+      "Layer 9, std of hidden units = 0.001\n",
+      "Layer 10, std of hidden units = 0.001\n",
+      "Layer 11, std of hidden units = 0.000\n",
+      "Layer 12, std of hidden units = 0.000\n",
+      "Layer 13, std of hidden units = 0.000\n",
+      "Layer 14, std of hidden units = 0.000\n",
+      "Layer 15, std of hidden units = 0.000\n",
+      "Layer 16, std of hidden units = 0.000\n",
+      "Layer 17, std of hidden units = 0.000\n",
+      "Layer 18, std of hidden units = 0.000\n",
+      "Layer 19, std of hidden units = 0.000\n",
+      "Layer 20, std of hidden units = 0.000\n",
+      "Layer 21, std of hidden units = 0.000\n",
+      "Layer 22, std of hidden units = 0.000\n",
+      "Layer 23, std of hidden units = 0.000\n",
+      "Layer 24, std of hidden units = 0.000\n",
+      "Layer 25, std of hidden units = 0.000\n",
+      "Layer 26, std of hidden units = 0.000\n",
+      "Layer 27, std of hidden units = 0.000\n",
+      "Layer 28, std of hidden units = 0.000\n",
+      "Layer 29, std of hidden units = 0.000\n",
+      "Layer 30, std of hidden units = 0.000\n",
+      "Layer 31, std of hidden units = 0.000\n",
+      "Layer 32, std of hidden units = 0.000\n",
+      "Layer 33, std of hidden units = 0.000\n",
+      "Layer 34, std of hidden units = 0.000\n",
+      "Layer 35, std of hidden units = 0.000\n",
+      "Layer 36, std of hidden units = 0.000\n",
+      "Layer 37, std of hidden units = 0.000\n",
+      "Layer 38, std of hidden units = 0.000\n",
+      "Layer 39, std of hidden units = 0.000\n",
+      "Layer 40, std of hidden units = 0.000\n",
+      "Layer 41, std of hidden units = 0.000\n",
+      "Layer 42, std of hidden units = 0.000\n",
+      "Layer 43, std of hidden units = 0.000\n",
+      "Layer 44, std of hidden units = 0.000\n",
+      "Layer 45, std of hidden units = 0.000\n",
+      "Layer 46, std of hidden units = 0.000\n",
+      "Layer 47, std of hidden units = 0.000\n",
+      "Layer 48, std of hidden units = 0.000\n",
+      "Layer 49, std of hidden units = 0.000\n",
+      "Layer 50, std of hidden units = 0.000\n"
      ]
     }
    ],
-   "execution_count": 26
-  },
-  {
-   "cell_type": "code",
    "source": [
     "# You can see that the values of the hidden units are increasing on average (the variance is across all hidden units at the layer\n",
     "# and the 1000 training examples\n",
     "\n",
     "# TODO\n",
     "# Change this to 50 layers with 80 hidden units per layer\n",
-    "\n",
-    "# TODO\n",
-    "# Now experiment with sigma_sq_omega to try to stop the variance of the forward computation exploding"
-   ],
-   "metadata": {
-    "id": "VL_SO4tar3DC",
-    "ExecuteTime": {
-     "end_time": "2024-04-07T00:21:48.709133Z",
-     "start_time": "2024-04-07T00:21:48.705335Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 27
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Now let's define a loss function.  We'll just use the least squares loss function. We'll also write a function to compute dloss_doutput\n"
-   ],
-   "metadata": {
-    "id": "SxVTKp3IcoBF"
-   }
+    "K = 50\n",
+    "D = 80\n",
+    "all_weights, all_biases = init_params(K, D, sigma_sq_omega)\n",
+    "net_output, all_f, all_h = compute_network_output(data_in, all_weights, all_biases)\n",
+    "for layer in range(1, K + 1):\n",
+    "    print(\"Layer %d, std of hidden units = %3.3f\" % (layer, np.std(all_h[layer])))\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer 1, std of hidden units = 0.063\n",
+      "Layer 2, std of hidden units = 0.031\n",
+      "Layer 3, std of hidden units = 0.021\n",
+      "Layer 4, std of hidden units = 0.016\n",
+      "Layer 5, std of hidden units = 0.011\n",
+      "Layer 6, std of hidden units = 0.006\n",
+      "Layer 7, std of hidden units = 0.004\n",
+      "Layer 8, std of hidden units = 0.002\n",
+      "Layer 9, std of hidden units = 0.001\n",
+      "Layer 10, std of hidden units = 0.001\n",
+      "Layer 11, std of hidden units = 0.000\n",
+      "Layer 12, std of hidden units = 0.000\n",
+      "Layer 13, std of hidden units = 0.000\n",
+      "Layer 14, std of hidden units = 0.000\n",
+      "Layer 15, std of hidden units = 0.000\n",
+      "Layer 16, std of hidden units = 0.000\n",
+      "Layer 17, std of hidden units = 0.000\n",
+      "Layer 18, std of hidden units = 0.000\n",
+      "Layer 19, std of hidden units = 0.000\n",
+      "Layer 20, std of hidden units = 0.000\n",
+      "Layer 21, std of hidden units = 0.000\n",
+      "Layer 22, std of hidden units = 0.000\n",
+      "Layer 23, std of hidden units = 0.000\n",
+      "Layer 24, std of hidden units = 0.000\n",
+      "Layer 25, std of hidden units = 0.000\n",
+      "Layer 26, std of hidden units = 0.000\n",
+      "Layer 27, std of hidden units = 0.000\n",
+      "Layer 28, std of hidden units = 0.000\n",
+      "Layer 29, std of hidden units = 0.000\n",
+      "Layer 30, std of hidden units = 0.000\n",
+      "Layer 31, std of hidden units = 0.000\n",
+      "Layer 32, std of hidden units = 0.000\n",
+      "Layer 33, std of hidden units = 0.000\n",
+      "Layer 34, std of hidden units = 0.000\n",
+      "Layer 35, std of hidden units = 0.000\n",
+      "Layer 36, std of hidden units = 0.000\n",
+      "Layer 37, std of hidden units = 0.000\n",
+      "Layer 38, std of hidden units = 0.000\n",
+      "Layer 39, std of hidden units = 0.000\n",
+      "Layer 40, std of hidden units = 0.000\n",
+      "Layer 41, std of hidden units = 0.000\n",
+      "Layer 42, std of hidden units = 0.000\n",
+      "Layer 43, std of hidden units = 0.000\n",
+      "Layer 44, std of hidden units = 0.000\n",
+      "Layer 45, std of hidden units = 0.000\n",
+      "Layer 46, std of hidden units = 0.000\n",
+      "Layer 47, std of hidden units = 0.000\n",
+      "Layer 48, std of hidden units = 0.000\n",
+      "Layer 49, std of hidden units = 0.000\n",
+      "Layer 50, std of hidden units = 0.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO\n",
+    "# Now experiment with sigma_sq_omega to try to stop the variance of the forward computation exploding\n",
+    "sigma_sq_omega = 0.01\n",
+    "all_weights, all_biases = init_params(K, D, sigma_sq_omega)\n",
+    "net_output, all_f, all_h = compute_network_output(data_in, all_weights, all_biases)\n",
+    "for layer in range(1, K + 1):\n",
+    "    print(\"Layer %d, std of hidden units = %3.3f\" % (layer, np.std(all_h[layer])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "SxVTKp3IcoBF"
+   },
+   "source": [
+    "Now let's define a loss function.  We'll just use the least squares loss function. We'll also write a function to compute dloss_doutput\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-07T00:21:48.869184Z",
+     "start_time": "2024-04-07T00:21:48.863640Z"
+    },
+    "id": "6XqWSYWJdhQR"
+   },
+   "outputs": [],
    "source": [
     "def least_squares_loss(net_output, y):\n",
     "    return np.sum((net_output - y) * (net_output - y))\n",
@@ -248,28 +372,28 @@
     "\n",
     "def d_loss_d_output(net_output, y):\n",
     "    return 2 * (net_output - y)"
-   ],
-   "metadata": {
-    "id": "6XqWSYWJdhQR",
-    "ExecuteTime": {
-     "end_time": "2024-04-07T00:21:48.869184Z",
-     "start_time": "2024-04-07T00:21:48.863640Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 28
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Here's the code for the backward pass"
-   ],
    "metadata": {
     "id": "98WmyqFYWA-0"
-   }
+   },
+   "source": [
+    "Here's the code for the backward pass"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-07T00:26:17.926666Z",
+     "start_time": "2024-04-07T00:26:17.917636Z"
+    },
+    "id": "LJng7WpRPLMz"
+   },
+   "outputs": [],
    "source": [
     "# We'll need the indicator function\n",
     "def indicator_function(x):\n",
@@ -306,28 +430,39 @@
     "            all_dl_df[layer - 1] = indicator_function(all_f[layer - 1]) * all_dl_dh[layer]\n",
     "\n",
     "    return all_dl_dweights, all_dl_dbiases, all_dl_dh, all_dl_df"
-   ],
-   "metadata": {
-    "id": "LJng7WpRPLMz",
-    "ExecuteTime": {
-     "end_time": "2024-04-07T00:26:17.926666Z",
-     "start_time": "2024-04-07T00:26:17.917636Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 36
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Now let's look at what happens to the magnitude of the gradients on the way back."
-   ],
    "metadata": {
     "id": "phFnbthqwhFi"
-   }
+   },
+   "source": [
+    "Now let's look at what happens to the magnitude of the gradients on the way back."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-07T00:30:34.523848Z",
+     "start_time": "2024-04-07T00:30:34.489735Z"
+    },
+    "id": "9A9MHc4sQvbp"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer 1, std of dl_dh = 0.143\n",
+      "Layer 2, std of dl_dh = 0.244\n",
+      "Layer 3, std of dl_dh = 0.175\n",
+      "Layer 4, std of dl_dh = 0.202\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of layers\n",
     "K = 5\n",
@@ -360,30 +495,19 @@
     "\n",
     "for layer in range(1, K):\n",
     "    print(\"Layer %d, std of dl_dh = %3.3f\" % (layer, np.std(aggregate_dl_df[layer].ravel())))\n"
-   ],
-   "metadata": {
-    "id": "9A9MHc4sQvbp",
-    "ExecuteTime": {
-     "end_time": "2024-04-07T00:30:34.523848Z",
-     "start_time": "2024-04-07T00:30:34.489735Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Layer 1, std of dl_dh = 0.143\n",
-      "Layer 2, std of dl_dh = 0.244\n",
-      "Layer 3, std of dl_dh = 0.175\n",
-      "Layer 4, std of dl_dh = 0.202\n"
-     ]
-    }
-   ],
-   "execution_count": 47
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-07T00:21:49.014164Z",
+     "start_time": "2024-04-07T00:21:49.009744Z"
+    },
+    "id": "gtokc0VX0839"
+   },
+   "outputs": [],
    "source": [
     "# You can see that the values of the hidden units are increasing on average (the variance is across all hidden units at the layer\n",
     "# and the 1000 training examples\n",
@@ -496,16 +620,33 @@
     "Layer 48, std of dl_dh = 443093563925919.312\n",
     "Layer 49, std of dl_dh = 188178497645189.219\n",
     "\"\"\"\n"
-   ],
-   "metadata": {
-    "id": "gtokc0VX0839",
-    "ExecuteTime": {
-     "end_time": "2024-04-07T00:21:49.014164Z",
-     "start_time": "2024-04-07T00:21:49.009744Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 31
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyOaATWBrwVMylV1akcKtHjt",
+   "include_colab_link": true,
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
